--- a/08-springboot-2.6.1/build.gradle
+++ b/08-springboot-2.6.1/build.gradle
@@ -8,6 +8,8 @@ group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
+ext['log4j2.version'] = '2.16.0'
+
 repositories {
 	mavenCentral()
 }
